# nrp-core

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  Dockerfile  Dockerfile.flightmare_nrpcore  Dockerfile.unity  Jenkinsfile  README.HBP  README.md  build.sh  build_nrp_core_image.sh  docker-compose-env.yaml  docker-compose-nrp.yaml  docker-compose.yaml  nrp-run.bash  nrp_core_installer.sh  run_unity_container.sh  simulation_config.json
.ci/: 05-build.sh  (+17 more)
nrp_clients/python/: CMakeLists.txt  setup.cfg.in
nrp_clients/python/nrp_client/: __init__.py  nrp_server_docker_launchers.py  nrp_server_launchers.py
nrp_comm_proxies/nrp_mqtt_proxy/: CMakeLists.txt
nrp_comm_proxies/nrp_mqtt_proxy/cmake/: ProjectConfig.cmake.in
nrp_comm_proxies/nrp_mqtt_proxy/nrp_mqtt_proxy/: nrp_mqtt_client.cpp  nrp_mqtt_client.h  nrp_mqtt_proxy.cpp  nrp_mqtt_proxy.h
nrp_comm_proxies/nrp_mqtt_proxy/tests/: nrp_mqtt_client_mock.cpp  nrp_mqtt_client_mock.h  test_mqtt_client.cpp
nrp_comm_proxies/nrp_ros_proxy/: CMakeLists.txt
nrp_comm_proxies/nrp_ros_proxy/nrp_ros_proxy/: nrp_ros_proxy.cpp  nrp_ros_proxy.h
nrp_datatransfer_grpc_engine/: CMakeLists.txt
nrp_datatransfer_grpc_engine/datatransfer_grpc_engine/config/: cmake_constants.h.in  datatransfer_config.h
nrp_datatransfer_grpc_engine/datatransfer_grpc_engine/engine_client/: datatransfer_grpc_client.cpp  datatransfer_grpc_client.h
nrp_datatransfer_grpc_engine/datatransfer_grpc_engine/engine_server/: datatransfer_grpc_server.cpp  datatransfer_grpc_server.h  nrp_mqtt_client.cpp  nrp_mqtt_client.h  stream_datapack_controller.cpp  stream_datapack_controller.h
nrp_datatransfer_grpc_engine/datatransfer_grpc_engine/server_executable/: main.cpp  main_async.cpp
nrp_datatransfer_grpc_engine/tests/: nrp_mqtt_client_mock.h  test_datatransfer_grpc_engine.cpp  test_env_cmake.h.in  test_mqtt_datatransfer_grpc_engine.cpp  test_stream_datapack_controller.cpp
nrp_datatransfer_grpc_engine/tests/test_files/: engine_test_config.json
nrp_event_loop/: CMakeLists.txt
nrp_event_loop/cmake/: ProjectConfig.cmake.in
nrp_event_loop/fn_factory_module/: CMakeLists.txt  build_fn_factory_module.sh.in  fn_factory_module.cpp.template  generate_fn_factory_module.cpp
nrp_event_loop/nrp_event_loop/computational_graph/: computational_graph.cpp  computational_graph.h  computational_graph_manager.cpp  computational_graph_manager.h  computational_node.cpp  computational_node.h  computational_node_policies.h  functional_node.cpp  functional_node.h  functional_node_factory.cpp  functional_node_factory.h  input_node.cpp  input_node.h  input_port.cpp  input_port.h  output_node.cpp  output_node.h  output_port.cpp  output_port.h  port.cpp  port.h
nrp_event_loop/nrp_event_loop/config/: cmake_constants.h.in
nrp_event_loop/nrp_event_loop/event_loop/: event_loop.cpp  event_loop.h  event_loop_engine.cpp  event_loop_engine.h  event_loop_engine_opts_parser.cpp  event_loop_engine_opts_parser.h  event_loop_interface.cpp  event_loop_interface.h
nrp_event_loop/python/: __init__.py.in  event_loop_engine.py  event_loop_interface.py  python_module.cpp
nrp_event_loop/python_module/: python_module.cpp
nrp_event_loop/tests/: test_computational_graph.cpp  test_event_loop.cpp  test_event_loop.py  test_event_loop_engine.cpp  test_event_loop_engine.py  test_nodes.cpp  test_ports.cpp  test_python_nodes.cpp  test_python_ros_nodes.cpp
nrp_gazebo_engines/: CMakeLists.txt
nrp_gazebo_engines/nrp_gazebo_devices/: CMakeLists.txt
nrp_gazebo_engines/nrp_gazebo_grpc_engine/: CMakeLists.txt
nrp_gazebo_engines/nrp_gazebo_json_engine/: CMakeLists.txt
nrp_gazebo_engines/nrp_gazebo_mpi_engine/: CMakeLists.txt
nrp_general_library/: CMakeLists.txt
nrp_general_library/cmake/: ProjectConfig.cmake.in
nrp_general_library/tests/: base_config.cpp  config_storage.cpp  datapack.cpp  datapack_interface.cpp  device_data.cpp  device_interface.cpp  docker_handle_tests.py  engine_launcher_manager.cpp  json_property_serializer.cpp  mpi_communication.cpp  mpi_property_serializer.cpp  plugin_manager.cpp  property_template.cpp  python_dict_property_serializer.cpp  python_module.cpp  test_engine_client.cpp  test_env_cmake.h.in  test_function_manager.cpp  test_plugin.cpp  test_process_exec.cpp  test_process_launcher_basic.cpp  test_transceiver_function_interpreter.cpp  test_transceiver_function_interpreter.h  test_transceiver_function_manager.cpp  test_transceiver_function_manager.h  transceiver_function_interpreter.cpp
nrp_nest_engines/: CMakeLists.txt
nrp_nest_engines/nrp_nest_json_engine/: CMakeLists.txt
nrp_nest_engines/nrp_nest_server_engine/: CMakeLists.txt
nrp_protobuf/: CMakeLists.txt
nrp_protobuf/cmake/: NRPProtoFile.cmake  ProjectConfig.cmake.in  proto_libraries.h.in  protobuf_ops_module.cpp.in  python_module.cpp.in
nrp_protobuf/config/: cmake_constants.h.in
nrp_protobuf/engine_proto_defs/: gazebo_msgs.proto
nrp_protobuf/nrp_proto_defs/: engine_grpc.proto  engine_msgs.proto  nrp_server.proto
nrp_protobuf/proto_python_bindings/: proto_field_ops.cpp  proto_field_ops.h  proto_python_bindings.h  repeated_field_proxy.cpp  repeated_field_proxy.h
nrp_protobuf/python/: proto_modules.py.in
nrp_protobuf/python_module/: __init__.py.in  python_module.cpp.in  setup.cfg.in
nrp_protobuf/utils/: protobuf_utils.h.in
nrp_pysim_engines/: CMakeLists.txt
nrp_pysim_engines/tests/: test_env_cmake.h.in  test_opensim_engine.cpp  test_opensim_simulation.py  test_pysim_executable.cpp  test_pysim_server.cpp
nrp_ros/nrp_ros_msgs/: CMakeLists.txt
nrp_ros/python_bindings/: CMakeLists.txt
nrp_ros_msgs/python_bindings/: CMakeLists.txt  package.xml
nrp_simulation/: CMakeLists.txt
nrp_simulation/nrp_simulation_executable/: main.cpp
nrp_simulation/tests/: fti_loop.cpp  fti_simulation_manager.cpp  main.cpp  server.py  simulation_loop.cpp  simulation_manager.cpp  simulation_parameters.cpp  test_env_cmake.h.in  test_event_loop.cpp  test_simulation_data_manager.cpp
nrp_unity_grpc_engine/: CMakeLists.txt
nrp_unity_grpc_engine/devices/: camera.cpp  camera.h  info.cpp  info.h
(+1653 files in other folders)
